Fixed header margin bottom issues on small screens

--- a/style.css
+++ b/style.css
@@ -475,6 +475,11 @@ footer {
 
 /* Small phones to small tablets: from 481 to 767px */
 @media only screen and (max-width: 767px) {
+    header {
+        height: auto;
+        margin-bottom: 100px;
+    }
+
     body {
         max-width: 90vw;
 
@@ -622,7 +627,7 @@ footer {
     }
 }
 
-@media only screen and (max-height: 600px) {
+/* @media only screen and (max-height: 600px) {
     header {
         height: auto;
         margin-bottom: 100px;
@@ -631,4 +636,4 @@ footer {
     .scroll-indicator {
         display: none;
     }
-}
+} */
